--- a/código/style.css
+++ b/código/style.css
@@ -183,6 +183,9 @@ body {
 
 #btn_voltar {
     display: inline-block;
+    position: absolute;
+    top: 85%;
+    left: 8%;
     height: 50px;
     width: 150px;
     background-color: rgb(0, 0, 0);
@@ -293,7 +296,7 @@ body {
 }
 
 #title_btn_text_deb {
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 45px;
     font: bold;
     text-align: center;
@@ -339,7 +342,7 @@ body {
 }
 
 
-#text_in_modal_valor_confirmar{
+#text_in_modal_valor_confirmar {
     display: flex;
     justify-content: center;
     font-size: 30px;
@@ -360,9 +363,9 @@ body {
     width: 15%;
     padding: 10px;
     text-decoration: none;
-    background-color: #cfcca8;
+    background-color: rgb(11, 193, 210);
     color: #000000;
-    border-radius: 3px;
+    border-radius: 10px;
     text-align: center;
 }
 
@@ -370,9 +373,9 @@ body {
     width: 15%;
     padding: 10px;
     text-decoration: none;
-    background-color: #cfcca8;
+    background-color: rgb(11, 193, 210);
     color: #000000;
-    border-radius: 3px;
+    border-radius: 10px;
     text-align: center;
 }
 
@@ -383,4 +386,303 @@ body {
     align-items: center;
     justify-content: center;
     gap: 30px;
+}
+
+
+
+/* ------------------Loading deb---------------------- */
+#load {
+    position: absolute;
+    width: 600px;
+    height: 36px;
+    left: 50%;
+    top: 15%;
+    margin-left: -300px;
+    overflow: visible;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
+}
+
+#load div {
+    position: absolute;
+    width: 20px;
+    height: 36px;
+    opacity: 0;
+    font-family: Helvetica, Arial, sans-serif;
+    animation: move 10s linear infinite;
+    -o-animation: move 5s linear infinite;
+    -moz-animation: move 5s linear infinite;
+    -webkit-animation: move 2s linear infinite;
+    transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    color: #ffffff;
+}
+
+#load div:nth-child(2) {
+    animation-delay: 0.2s;
+    -o-animation-delay: 0.2s;
+    -moz-animation-delay: 0.2s;
+    -webkit-animation-delay: 0.2s;
+}
+
+#load div:nth-child(3) {
+    animation-delay: 0.4s;
+    -o-animation-delay: 0.4s;
+    -webkit-animation-delay: 0.4s;
+    -webkit-animation-delay: 0.4s;
+}
+
+#load div:nth-child(4) {
+    animation-delay: 0.6s;
+    -o-animation-delay: 0.6s;
+    -moz-animation-delay: 0.6s;
+    -webkit-animation-delay: 0.6s;
+}
+
+#load div:nth-child(5) {
+    animation-delay: 0.8s;
+    -o-animation-delay: 0.8s;
+    -moz-animation-delay: 0.8s;
+    -webkit-animation-delay: 0.8s;
+}
+
+#load div:nth-child(6) {
+    animation-delay: 1s;
+    -o-animation-delay: 1s;
+    -moz-animation-delay: 1s;
+    -webkit-animation-delay: 1s;
+}
+
+#load div:nth-child(7) {
+    animation-delay: 1.2s;
+    -o-animation-delay: 1.2s;
+    -moz-animation-delay: 1.2s;
+    -webkit-animation-delay: 1.2s;
+}
+
+@keyframes move {
+    0% {
+        left: 0;
+        opacity: 0;
+    }
+
+    35% {
+        left: 41%;
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        opacity: 1;
+    }
+
+    65% {
+        left: 59%;
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        opacity: 1;
+    }
+
+    100% {
+        left: 100%;
+        -moz-transform: rotate(-180deg);
+        -webkit-transform: rotate(-180deg);
+        -o-transform: rotate(-180deg);
+        transform: rotate(-180deg);
+        opacity: 0;
+    }
+}
+
+@-moz-keyframes move {
+    0% {
+        left: 0;
+        opacity: 0;
+    }
+
+    35% {
+        left: 41%;
+        -moz-transform: rotate(0deg);
+        transform: rotate(0deg);
+        opacity: 1;
+    }
+
+    65% {
+        left: 59%;
+        -moz-transform: rotate(0deg);
+        transform: rotate(0deg);
+        opacity: 1;
+    }
+
+    100% {
+        left: 100%;
+        -moz-transform: rotate(-180deg);
+        transform: rotate(-180deg);
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes move {
+    0% {
+        left: 0;
+        opacity: 0;
+    }
+
+    35% {
+        left: 41%;
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+        opacity: 1;
+    }
+
+    65% {
+        left: 59%;
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+        opacity: 1;
+    }
+
+    100% {
+        left: 100%;
+        -webkit-transform: rotate(-180deg);
+        transform: rotate(-180deg);
+        opacity: 0;
+    }
+}
+
+@-o-keyframes move {
+    0% {
+        left: 0;
+        opacity: 0;
+    }
+
+    35% {
+        left: 41%;
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        opacity: 1;
+    }
+
+    65% {
+        left: 59%;
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        opacity: 1;
+    }
+
+    100% {
+        left: 100%;
+        -o-transform: rotate(-180deg);
+        transform: rotate(-180deg);
+        opacity: 0;
+    }
+}
+
+.loading-container {
+    width: 30%;
+    height: 10px;
+    background-color: #f0f0f0;
+    position: fixed;
+    top: 50%;
+    left: 35%;
+    z-index: 4;
+}
+
+#loading-bar {
+    width: 0%;
+    height: 100%;
+    background-color: rgb(11, 193, 210);
+    transition: width 1s ease-in-out;
+}
+
+.loading-containe {
+    width: 30%;
+    height: 10px;
+    background-color: #f0f0f0;
+    position: fixed;
+    top: 50%;
+    left: 35%;
+    z-index: 4;
+}
+
+#loading-bara {
+    width: 0%;
+    height: 100%;
+    background-color: rgb(11, 193, 210);
+    transition: width 1s ease-in-out;
+}
+
+
+
+/* ------------------Insira card deb---------------------- */
+
+.holder_img_insert_card {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+}
+
+
+
+/* -----------------Digitesenha-------------------------*/
+
+.painel_senha {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.display {
+    width: 270px;
+    height: 40px;
+    border: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    background-color: white;
+}
+
+.teclado {
+    display: grid;
+    grid-template-columns: 0fr 0fr;
+    grid-gap: 2px;
+}
+
+.numero {
+    width: 90px;
+    height: 60px;
+    font-size: 20px;
+    justify-self: center;
+    background-color: rgb(11, 193, 210);
+    border-radius: 10px;
+}
+
+
+.limpar {
+    border-radius: 10px;
+    justify-self: center;
+    width: 90px;
+    height: 60px;
+    font-size: 16px;
+    background-color: rgb(11, 193, 210);
+}
+
+.confirmar {
+    grid-column: span 3;
+    border-radius: 10px;
+    justify-self: center;
+    width: 270px;
+    height: 60px;
+    font-size: 16px;
+    background-color: rgb(11, 193, 210);
 }
